Fixes #15587: Change introduction and description fields look in Rudder web interface

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentPolicyMode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentPolicyMode.html
@@ -5,7 +5,7 @@
        <div id="agentPolicyMode" class="page-title">Node Policy Mode</div>
      </div>
      <div class="col-xs-12">
-       <div class="col-xs-12 callout-fade callout-warning">
+       <div class="col-xs-12 callout-fade callout-info">
          <div class="marker">
            <span class="glyphicon glyphicon-info-sign"></span>
          </div>
