--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentSchedule.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentAgentSchedule.html
@@ -40,7 +40,7 @@
 <div class="inner-portlet" id="cfagentSchedule">
   <div class="page-title">Agent run schedule</div>
   <div class="portlet-content"  id="agentScheduleController" ng-controller="cfagentScheduleController">
-    <div class="col-xs-12 callout-fade callout-warning">
+    <div class="col-xs-12 callout-fade callout-info">
       <div class="marker">
         <span class="glyphicon glyphicon-info-sign"></span>
       </div>
