--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeState.html
@@ -2,7 +2,7 @@
 <div class="inner-portlet" id="nodeState">
   <div class="page-title">Node state</div>
   <div class="portlet-content" id="nodeStateController">
-    <div class="col-xs-12 callout-fade callout-warning">
+    <div class="col-xs-12 callout-fade callout-info">
       <div class="marker">
         <span class="glyphicon glyphicon-info-sign"></span>
       </div>
