--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -132,7 +132,7 @@
 <div class="object-details">
 
   <div id="pendingChangeRequestNotification">
-    <div class="callout-fade callout-warning">
+    <div class="callout-fade callout-info">
       <div class="marker"><span class="glyphicon glyphicon-info-sign"></span></div>
       The following pending change requests affect this Rule, you should check that your modification is not already pending:
       <ul id="changeRequestList"></ul>
