--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentComplianceMode.html
@@ -5,7 +5,7 @@
   <div class="page-title"  ng-hide="isNodePage">Compliance reporting mode</div>
   <div class="portlet-content">
     <div ng-hide="isNodePage">
-      <div class="col-lg-12 callout-fade callout-warning">
+      <div class="col-lg-12 callout-fade callout-info">
         <div class="marker">
           <span class="glyphicon glyphicon-info-sign"></span>
         </div>
