--- a/builder/templates/modals.html
+++ b/builder/templates/modals.html
@@ -2,11 +2,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
+        <h4 class="modal-title">{{"preview" | translate}}</h4>
         <button type="button" class="close" data-dismiss="modal">
             <span aria-hidden="true">&times;</span>
             <span class="sr-only">{{"close" | translate}}</span>
         </button>
-        <h4 class="modal-title">{{"preview" | translate}}</h4>
       </div>
       <div class="modal-body">
         <div class="text-center">
@@ -27,11 +27,11 @@
     <div class="modal-content">
     <form ng-submit="remove()">
       <div class="modal-header">
+        <h4 class="modal-title">{{"confirm" | translate}}</h4>
         <button type="button" class="close" data-dismiss="modal">
             <span aria-hidden="true">&times;</span>
             <span class="sr-only">{{"close" | translate}}</span>
         </button>
-        <h4 class="modal-title">{{"confirm" | translate}}</h4>
       </div>
       <div class="modal-body">
         {{'sure_to_delete' | translate}} <span ng-include data-src="'selected-files-msg'"></span>
@@ -52,11 +52,11 @@
     <div class="modal-content">
         <form ng-submit="move()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'move' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'move' | translate}}</h4>
             </div>
             <div class="modal-body">
               <div ng-include data-src="'path-selector'" class="clearfix"></div>
@@ -77,11 +77,11 @@
     <div class="modal-content">
         <form ng-submit="rename()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'rename' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'rename' | translate}}</h4>
             </div>
             <div class="modal-body">
               <label class="radio">{{'enter_new_name_for' | translate}} <b>{{singleSelection() && singleSelection().model.name}}</b></label>
@@ -103,11 +103,11 @@
     <div class="modal-content">
         <form ng-submit="copy()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'copy_file' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'copy_file' | translate}}</h4>
             </div>
             <div class="modal-body">
               <div ng-show="singleSelection()">
@@ -132,11 +132,11 @@
     <div class="modal-content">
         <form ng-submit="compress()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'compress' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'compress' | translate}}</h4>
             </div>
             <div class="modal-body">
               <div ng-show="apiMiddleware.apiHandler.asyncSuccess">
@@ -176,11 +176,11 @@
     <div class="modal-content">
         <form ng-submit="extract()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'extract_item' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'extract_item' | translate}}</h4>
             </div>
             <div class="modal-body">
               <div ng-show="apiMiddleware.apiHandler.asyncSuccess">
@@ -211,15 +211,15 @@
     <div class="modal-content">
         <form ng-submit="edit()">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">
-                  <span aria-hidden="true">&times;</span>
-                  <span class="sr-only">{{"close" | translate}}</span>
-              </button>
+              <h4 class="modal-title">{{'edit_file' | translate}}</h4>
               <button type="button" class="close fullscreen" ng-click="fullscreen=!fullscreen">
                   <i class="glyphicon glyphicon-fullscreen"></i>
                   <span class="sr-only">{{'toggle_fullscreen' | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'edit_file' | translate}}</h4>
+              <button type="button" class="close" data-dismiss="modal">
+                  <span aria-hidden="true">&times;</span>
+                  <span class="sr-only">{{"close" | translate}}</span>
+              </button>
             </div>
             <div class="modal-body">
                 <label class="radio bold">{{ singleSelection().model.fullPath() }}</label>
@@ -241,11 +241,11 @@
     <div class="modal-content">
         <form ng-submit="createFolder()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'new_folder' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'new_folder' | translate}}</h4>
             </div>
             <div class="modal-body">
               <label class="radio">{{'folder_name' | translate}}</label>
@@ -266,29 +266,31 @@
     <div class="modal-content">
         <form>
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">
-                  <span aria-hidden="true">&times;</span>
-                  <span class="sr-only">{{"close" | translate}}</span>
-              </button>
               <h4 class="modal-title">{{"upload_files" | translate}}</h4>
+              <button type="button" class="close" data-dismiss="modal">
+                <span aria-hidden="true">&times;</span>
+                <span class="sr-only">{{"close" | translate}}</span>
+              </button>
             </div>
             <div class="modal-body">
               <label class="radio">
                 {{"files_will_uploaded_to" | translate}} 
                 <b>/{{fileNavigator.currentPath.join('/')}}</b>
               </label>
-              <button class="btn btn-default btn-block" ngf-select="$parent.addForUpload($files)" ngf-multiple="true">
+              <button class="btn btn-default btn-block mt-2" ngf-select="$parent.addForUpload($files)" ngf-multiple="true">
                 {{"select_files" | translate}}
               </button>
               
               <div class="upload-list">
                 <ul class="list-group">
                   <li class="list-group-item" ng-repeat="(index, uploadFile) in $parent.uploadFileList">
-                    <button class="btn btn-sm btn-danger pull-right" ng-click="$parent.removeFromUpload(index)">
-                        &times;
+                    <div class="col">
+                      <h5 class="list-group-item-heading">{{uploadFile.name}}</h5>
+                      <p class="list-group-item-text">{{uploadFile.size | humanReadableFileSize}}</p>
+                    </div>
+                    <button class="btn btn-danger col-auto" ng-click="$parent.removeFromUpload(index)">
+                      <i class="fa fa-times"></i>
                     </button>
-                    <h5 class="list-group-item-heading">{{uploadFile.name}}</h5>
-                    <p class="list-group-item-text">{{uploadFile.size | humanReadableFileSize}}</p>
                   </li>
                 </ul>
                 <div ng-show="apiMiddleware.apiHandler.inprocess">
@@ -316,11 +318,11 @@
     <div class="modal-content">
         <form ng-submit="changePermissions()">
             <div class="modal-header">
+              <h4 class="modal-title">{{'change_permissions' | translate}}</h4>
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
                   <span class="sr-only">{{"close" | translate}}</span>
               </button>
-              <h4 class="modal-title">{{'change_permissions' | translate}}</h4>
             </div>
             <div class="modal-body">
               <table class="table mb0">
@@ -375,11 +377,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
+        <h4 class="modal-title">{{"select_destination_folder" | translate}}</h4>
         <button type="button" class="close" data-dismiss="modal">
             <span aria-hidden="true">&times;</span>
             <span class="sr-only">{{"close" | translate}}</span>
         </button>
-        <h4 class="modal-title">{{"select_destination_folder" | translate}}</h4>
       </div>
       <div class="modal-body">
         <div>
