--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
@@ -82,6 +82,18 @@
           <div class="directiveTechnicalInfo" id="showTechnical"></div>
           <div id="technicalDetails" style="display:none" class="well">
             <div class="directiveTechnicalInfo row wbBaseField form-group">
+              <label>Directive ID</label>
+              <div id="directiveID" class="fake-form-control readonly">
+                Here comes the directive ID
+              </div>
+            </div>
+            <div class="directiveTechnicalInfo row wbBaseField form-group">
+              <label>Technique ID</label>
+              <div id="techniqueID" class="fake-form-control readonly">
+                Technique ID
+              </div>
+            </div>
+            <div class="directiveTechnicalInfo row wbBaseField form-group">
               <label>Technique name</label>
                 <div id="techniqueName">
                   Technique name
@@ -109,12 +121,6 @@
               <label>Supported agents</label>
               <div id="compatibilityAgent" class="fake-form-control readonly">
                 System Compatibility
-              </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Directive Rudder ID</label>
-              <div id="rudderID" class="fake-form-control readonly">
-                Here comes the rudder ID
               </div>
             </div>
           </div>
