Fixes #15713: Show log informations next to reports and full compliance report

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
@@ -458,3 +458,14 @@ td.listclose:after {
   width: 100%;
   text-align: left;
 }
+
+.dtrg-group td::before {
+  content : "\f013  Run start date: ";
+  font-family: FontAwesome;
+}
+
+table.dataTable tr.dtrg-group td {
+  background-color : #eeeeee;
+  font-weight: bold;
+  color: #555
+}
