--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/NodeGroupForm.html
@@ -32,7 +32,7 @@
 <div id="GroupTabs">
   <ul id="groupTabMenu">
     <li><a href="#groupParametersTab">Group parameters</a></li>
-    <li><a href="#groupRulesTab">Applied Rules</a></li>
+    <li><a href="#groupRulesTab">Related Rules</a></li>
   </ul>
 
   <div id="groupParametersTab">
@@ -84,7 +84,7 @@
   </div>
   <div id="groupRulesTab">
     <div class="section-title">
-      This group is a target of the following rules:
+      This group is used in following rule targets (either as a target or exception group):
     </div>
     <div id="groupRuleTabsContent"></div> </div>
 </div>
