Fixes #16007: We cannot close the resource uploader

--- a/builder/templates/navbar.html
+++ b/builder/templates/navbar.html
@@ -77,6 +77,11 @@
                                 </li>
                             </ul>
                         </div>
+
+
+                        <button class="btn btn-flat btn-sm" ng-click="$parent.closeWindow($event,true)" title="{{'close' | translate}}">
+                                <i class="fa fa-times"></i>
+                            </button>
                     </div>
                 </div>
             </div>
